objects/FSL_Symptom__c.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDS_ID__c</fullName>
        <externalId>true</externalId>
        <label>CDS ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Complaint_Code__c</fullName>
        <label>Complaint Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <label>CreatedBy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguageKey__c</fullName>
        <label>LanguageKey</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Symptom_Category__c</fullName>
        <label>Symptom Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>smoke</fullName>
                </value>
                <value>
                    <fullName>Black Smoke</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Symptom__c</fullName>
        <label>Symptom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Black smoke</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Smoke</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FSL Symptom</label>
    <nameField>
        <label>FSL Symptom Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSL Symptoms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>